Fix template issues for AI code generation
- Add missing SQLAlchemy imports (Column, Integer) to models.py for legacy syntax compatibility
- Include utils.ts file in template (was missing from repository)
- Update .gitignore to allow frontend/src/lib/ directory
- Add common utility functions (formatDate, formatPrice, truncate) to utils.ts

Fixes:
- NameError: name 'Column' is not defined in AI-generated SQLAlchemy code
- Module not found: Can't resolve '@/lib/utils' in shadcn/ui components

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ dist/
 downloads/
 eggs/
 .eggs/
+# Python lib directories (but not frontend/src/lib)
 lib/
+lib64/
+!frontend/src/lib/
 lib64/
 parts/
 sdist/
